2023-10-30T00:31:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6686772244 # 1994
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-30
* notice: last 14d: unq all: 6 6
* notice: prev accum: outdated-unq outdated-all / unq all: 286 455 / 290 459
* notice: next accum: outdated-unq outdated-all / unq all: 286 455 / 292 461
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +5 +5 -0 -0 / 5 5
* notice: removed / changed dates: [] / [2023-10-29]

2023-10-29T16:06:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6684420027 # 1993
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-29
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 286 455 / 287 456
* notice: next accum: outdated-unq outdated-all / unq all: 286 455 / 290 459
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-10-29]

2023-10-24T00:30:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6620665116 # 1976
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 285 453 / 287 456
* notice: next accum: outdated-unq outdated-all / unq all: 286 455 / 287 456
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-09] / []

2023-10-20T08:08:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6585090121 # 1965