@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-30T00:31:13Z",
+  "timestamp" : "2023-10-30T16:08:03Z",
   "count_outdated" : 455,
   "uniques_outdated" : 286,
-  "count" : 461,
-  "uniques" : 292,
+  "count" : 462,
+  "uniques" : 293,
   "clones" : [
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -22,6 +22,15 @@
       "uniques": 5,
       "uniques_minmax": [ 3, 5 ],
       "uniques_decinc": [ 0, 5 ]
+    },
+    {
+      "timestamp": "2023-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
