@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 6,
+  "count": 7,
+  "uniques": 7,
   "clones": [
     {
       "timestamp": "2023-10-20T00:00:00Z",
@@ -11,6 +11,11 @@
       "timestamp": "2023-10-29T00:00:00Z",
       "count": 5,
       "uniques": 5
+    },
+    {
+      "timestamp": "2023-10-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
